<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="ruleSuggest">Suggest a new rule</string>
    <string name="minigameSuggest">Suggest a minigame</string>
    <string name="feedbackSuggest">Submit feedback or a message</string>
    <string name="quoteSuggest">Suggest a quote</string>
    <string name="cocktailSuggest">Suggest a new cocktail</string>
    <string name="drinkSuggest">Suggest a new drink</string>
    <string name="addPlayer">Add a player</string>
    <string name="removePlayer">Remove a player</string>
    <string name="seePlayers">See current list of players</string>
    <string name="addOrRemove">Add/Remove players</string>
    <string name="dare">Who dares to leave!</string>
    <string name="leftGame">left the game! Not cool 😡</string>
    <string name="cantRemove">You can\'t remove players if there are none…</string>
    <string name="cantSee">You can\'t see the list of players if there are none…</string>
    <string name="playerNameHint">Player\'s name</string>
    <string name="addButton">Add</string>
    <string name="playerJoined">has joined the game!</string>
    <string name="cantJoin">Please enter the name of the new player</string>
    <string name="languageChoice">Choose your language</string>
    <string name="engLang" translatable="false">🇺🇸 English</string>
    <string name="frLang" translatable="false">🇫🇷 Français</string>
    <string name="resetWarning">This will start a new deck.\nCurrent players will however be kept.</string>
    <string name="resetWarningNoPlayers">This will start a new deck.</string>
    <string name="yeeha">YEEHA</string>
    <string name="mark">Oh hi Mark</string>
    <string name="hello">Hello there</string>
    <string name="nothing">Nothing to see here</string>
    <string name="zeus">ZEUS</string>
    <string name="just">Just do it</string>
    <string name="balls">When in doubt, slap your balls</string>
    <string name="submitQuote1">Press here to submit your quote</string>
    <string name="puking">Puking is restarting</string>
    <string name="shoe">It\'s a shoe</string>
    <string name="sunrise">No sleeping before midnight</string>
    <string name="sshhh" translatable="false">🤫</string>
    <string name="fun">The only limit to fun is yours</string>
    <string name="nuggets">I\'ll see you in 23 nuggets</string>
    <string name="disclaimer">DISCLAIMER: These quotes are not to be taken seriously</string>
    <string name="chill">CHIIIIILL</string>
    <string name="shark" tools:ignore="Typos">Baby Shark doo doo doo doo doo doo</string>
    <string name="sugar">Eating sugar?</string>
    <string name="submitQuote2">Add your quote by pressing here</string>
    <string name="pimpim">Here, it\'s PIM-PIM</string>
    <string name="thirtySix" translatable="false">36</string>
    <string name="fortyTwo" translatable="false">42</string>
    <string name="order">Execute Order 15–32</string>
    <string name="swipe">Try swiping the screen</string>
    <string name="much">Too much is always better than not enough</string>
    <string name="what">What??</string>
    <string name="squirrel">6 Squirrel, a sixth of squirrel, 3 Squirrel</string>
    <string name="shots">For extra carnage turn sips into shots</string>
    <string name="fun2">This is where the fun begins</string>
    <string name="mixture">Mixture is always healthy</string>
    <string name="submitQuote3">Want to see one of your quotes? Press here 😎</string>
    <string name="pipe">Pipe down Fresh</string>
    <string name="aBitGood">This is a bit good</string>
    <string name="better">But this app is a bit better</string>
    <string name="app_name_for_game" translatable="false">Boozely</string>
    <string name="boozely_button">The Boozeled Game!</string>
    <string name="spec_drinks_button">Cocktail Menu</string>
    <string name="drink_tips">Tips for Drinks!</string>
    <string name="daily_quote">A random quote will appear here!</string>
    <string name="waiverTitleHome">Warning</string>
    <string name="waiverMessageHome">By continuing you confirm that:\n\nYou meet every legal requirement regarding the purchase, possession and consumption of alcohol.\n\nYou understand that any quotes displaying on the homescreen are there for comic purposes.\n\nYou are responsible for whatever happens while using Boozely.\n\nYou are here to have fun.\n\nThis waiver is too long…\n\nWkrjNgvwenVGovwncwOkvn</string>
    <string name="waiverYesHome">Yep, totally!</string>
    <string name="waiverNoHome">Absolutely not!</string>
    <string name="happyHallo">Merry Christmas!</string>
    <string name="uselessDescription" translatable="false">something useless</string>
    <string name="happyNewYear">Happy New Year !</string>
    <string name="resolutions">Don\'t forget your new year\'s resolutions</string>
    <string name="spookyIngredients">Tequila, Tangerine Lemonade, Grenadine, Black Sugar</string>
    <string name="spookyRecipe">For 2L:\n- Pour 300mL of Tequila\n- Add 600mL of Tangerine Lemonade\n- Complete to the 1L mark with Grenadine\n- Top up with ice, mix\n\nSprinkle Black Sugar on the glasses\' rim</string>
    <string name="darkIngredients">Gin, Pomegranate Juice, Simple Syrup</string>
    <string name="darkRecipe">For 2L (you will need a shaker):\n- Pour 600mL of Gin\n- Add 300mL of Pomegranate Juice\n- Complete to the 1L mark with the Syrup\n- Fill the rest with ice, shake for at least 30s\n\nAdd cubes of dry ice for a better effect</string>
    <string name="maskIngredients">Vodka, Chartreuse, Black Currant Juice</string>
    <string name="maskRecipe">For 2L:\n- Pour 375mL of Vodka\n- Add 125mL of Chartreuse\n- Complete with Black Currant Juice and ice, mix</string>
    <string name="vBloodIngredients">Vodka, Grenadine, Lemonade</string>
    <string name="vBloodRecipe">For 2L:\n- Put 8 shots of vodka (25mL the shot)\n- Add 150mL of Grenadine\n- Pour Lemonade up until the 1L mark\n- Complete with ice, mix</string>
    <string name="boneyardIngredients">Gin, White Rum, Tequila (Silver), Vodka, Blue Curacao, Sour Mix, Sparkling Water</string>
    <string name="boneyardRecipe">For 2L (you will need a shaker):\n- Fill the shaker with ice\n- Add 1 part of each alcohol and extra shot of Blue Curacao\n-Add 2 parts of Sour Mix\n-Shake well\n\nAdd the Sparkling Water directly in the glasses to your liking</string>
    <string name="ghouleIngredients">Gin, Ginger Ale, Cranberry Bitters, Grenadine</string>
    <string name="ghouleRecipe">For 2L:\n- Pour 300mL of Gin\n- Add 600mL of Ginger Ale\n- Put 8 dashes of Cranberry Bitter\n- Complete with ice, mix\n\nPour a shot of Grenadine inside the edge of the glasses after pouring</string>
    <string name="graveyardIngredients">Brandy, Root Beer Schnapps, Pineapple Juice</string>
    <string name="graveyardRecipe">For 2L (you will need a shaker):\n- Fill the shaker with ice\n- Put 375mL of Brandy\n- Add 275mL of Root Beer Schnapps\n- Complete with Pineapple Juice\n- Shake well</string>
    <string name="halloweenCardName">Special Halloween 🎃</string>
    <string name="halloweenCardRule">Trick or Treat! 🎃\nDo a dare or down the drink of the player on your right!</string>
    <string name="halloweenCardExplain">The other players in the room can give you a challenging dare.\nYou can either choose to do the dare or down the drink of the player on your right!\n\n\nYou can always down the drink of the player on your right before doing the dare… \nYou know if you need more courage? 👻\n</string>
    <string name="content" translatable="false">pumpkin</string>
    <string name="santaCard">Santa\'s Card</string>
    <string name="grinchCard">The Grinch\'s Card</string>
    <string name="naughtyGift">The Grinch\'s Gift</string>
    <string name="goodGift">Santa\'s Gift</string>
    <string name="santaCardSimpleRules">You are now Santa Clause!\nGive out 1 sip to anyone at each turn!</string>
    <string name="grinchCardSimpleRules">You are the new Grinch!\nAt anytime you can swap two players\' glasses!</string>
    <string name="goodGiftSimpleRules">You have received a good gift!\nYou can reduce the number of sips you take by 1!</string>
    <string name="naughtyGiftSimpleRules">Here\'s a bad gift!\nIncrease the numbers of sips you take by 1!</string>
    <string name="santaCardExplain">Until someone else draws this card, you can give 1 sip to whoever you want each time a player picks a new card!</string>
    <string name="grinchCardExplain">Until someone else draws this card, you can swap the glasses of two players at any moment as much as you want!</string>
    <string name="goodGiftExplain">When you have to drink, you can reduce the amount of sips you are supposed to take by 1!</string>
    <string name="naughtyGiftExplain">When you drink, you have to increase the amount of sips you are supposed to take by 1!</string>
    <string name="santaClauseNone">Current Santa Clause: none</string>
    <string name="grinchNone">Current Grinch: none</string>
    <string name="goodGiftedNone">Player who received the good gift:\nnone</string>
    <string name="badGiftedNone">Player who received the bad gift:\nnone</string>
    <string name="santaClause">Current Santa Clause: </string>
    <string name="grinch">Current Grinch: </string>
    <string name="goodGifted">Player who received the good gift:\n</string>
    <string name="badGifted">Player who received the bad gift:\n</string>
    <string name="cocktailLover">Cocktails</string>
    <string name="cocktail_prompt">Press here to submit a Cocktail!</string>
    <string name="sort_prompt">Sort By: </string>
    <string name="defSort">Default</string>
    <string name="naSort">Name</string>
    <string name="alLevSort">Alcohol Level (least to most)</string>
    <string name="nSpiritSort">Number of Spirits Needed</string>
    <string name="newCock">*New*</string>
    <string name="vinscarS">Alcohols.</string>
    <string name="manosS">Vodka, Passion Fruit Syrup, Lime, Mint</string>
    <string name="magascarS">Vanilla Vodka, Candies</string>
    <string name="ginberryS">Pink Gin, Black Raspberry Liqueur, Lemonade</string>
    <string name="tuityS">Peach Schnapps, Blue Curacao, Orange Juice, Lemonade</string>
    <string name="islandS">Orange Liqueur Triple Sec, Vodka, Tequila, Rum, Gin, Gomme Syrup, Lemon Juice, Cola</string>
    <string name="martiniS">Vanilla Vodka, Mango, Passion Fruit &amp; Orange Juices, Lemonade</string>
    <string name="beachS">Vodka, Peach Schnapps, Cranberry &amp; Orange Juices</string>
    <string name="punchS">White Rum, Coconut White Rum, Mango, Passion Fruit &amp; Pineapple Juice</string>
    <string name="rainS">Vodka, Blue Curacao, Grenadine, Lemonade</string>
    <string name="wooS">Vodka, Peach Schnapps, Cranberry Juice</string>
    <string name="lagoonS">Vodka, Blue Curacao, Lime Cordial, Lemonade</string>
    <string name="godfatherS">Scotch Whiskey, Amaretto, Cola</string>
    <string name="mojitoS">White Rum, Sugar, Lime &amp; Passion Fruit Juices, Soda Water, Mint, (Champagne)</string>
    <string name="coladaS">White Rum, Coconut White Rum, Sugar, Coconut Milk, Pineapple Juice</string>
    <string name="app_name" translatable="false">Boozely</string>
    <string name="welcomeMessage">Hi, I\'m the Drinkler!\nI am in charge of you now…</string>
    <string name="quickSummary">Boozely is a fun drinking card game best played at 8.\nVery much like the King\'s Cup or the Ring of Fire, each card will dictate your fate.\nTap the screen or swipe left and try to keep your face straight. 😜</string>
    <string name="quickAdvice">Please don\'t drink responsibly and make sure that at least a third of the players can\'t make it back on their own.</string>
    <string name="playButton">   Start Boozely!  </string>
    <string name="jokerIcon">The joker icon</string>
    <string name="cockFloat" translatable="false">🍸</string>
    <string name="drinkFloat" translatable="false">🥃</string>
</resources>