<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homescreen">

    <ImageView
        android:id="@+id/newYearBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/uselessDescription"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/newyearbackground" />

    <ImageView
        android:id="@+id/newyearbanner"
        android:layout_width="279dp"
        android:layout_height="69dp"
        android:contentDescription="@string/uselessDescription"
        android:src="@drawable/newyearbanner"
        app:layout_constraintStart_toEndOf="@+id/languagePref"
        app:layout_constraintTop_toTopOf="@+id/newYearBackground"
        app:srcCompat="@drawable/newyearbanner" />

    <TextView
        android:id="@+id/title"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:shadowColor="#000"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/app_name_for_game"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        android:textSize="90sp"
        android:visibility="visible"
        app:fontFamily="@font/bangers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newyearbanner"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/specDrinksButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corner_button"
        android:contentDescription="@string/cockFloat"
        android:drawableTop="@drawable/cocktailimgbig"
        android:text="@string/spec_drinks_button"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/boozelyTheGameButton"
        app:layout_constraintEnd_toStartOf="@+id/JokerButton"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyQuote"
        app:layout_constraintVertical_bias="0.083"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/drinksTipsButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corner_button"
        android:contentDescription="@string/drinkFloat"
        android:drawableTop="@drawable/drinkfloatimgpxlb"
        android:text="@string/drink_tips"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/boozelyTheGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/JokerButton"
        app:layout_constraintTop_toBottomOf="@+id/dailyQuote"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/boozelyTheGameButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corner_button"
        android:elevation="5dp"
        android:text="@string/boozely_button"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/publisherAdView"
        app:layout_constraintEnd_toEndOf="@+id/drinksTipsButton"
        app:layout_constraintStart_toStartOf="@+id/specDrinksButton"
        tools:targetApi="lollipop" />

    <com.google.android.gms.ads.doubleclick.PublisherAdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/publisherAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8818799719074826/7076921772"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-8818799719074826/7076921772"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.gms.ads.doubleclick.PublisherAdView>

    <TextView
        android:id="@+id/quoteBackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textSize="16sp"
        app:fontFamily="casual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/dailyQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/daily_quote"
        android:gravity="center"
        android:text="@string/daily_quote"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/JokerButton"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/jokerIcon"
        app:layout_constraintBottom_toTopOf="@+id/boozelyTheGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyQuote"
        app:layout_constraintVertical_bias="0.089999974"
        app:srcCompat="@drawable/jokericon" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/languagePref"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@android:color/white"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="src_in"
        app:elevation="1dp"
        app:fabCustomSize="50dp"
        app:fabSize="normal"
        app:hoveredFocusedTranslationZ="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="36dip"
        app:rippleColor="?attr/colorButtonNormal"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        app:useCompatPadding="true" />

    <TextView
        android:id="@+id/happyNewYearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="6dp"
        android:text="@string/happyNewYear"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:typeface="monospace"
        app:fontFamily="@font/boogaloo"
        app:layout_constraintBottom_toTopOf="@+id/boozelyTheGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JokerButton" />

</android.support.constraint.ConstraintLayout>